HelloUltraviolet/Fixtures/RejectedSource/Statements/ReturnAtModuleScope/Expected.uv
//! Expected diagnostic metadata for the ReturnAtModuleScope rejected-source specimen.

expectedDiagnostic("E-SEM-3165", "diag.18.ControlTransferStatements")
